[package]
name = "polkem-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.40"
tokio = { version = "1.26", features = ["rt-multi-thread", "macros", "time"] }
clap = { version = "4.1.14", features = ["derive"] }

subxt = { version = "0.28.0" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
tracing-subscriber = "0.3.11"
futures = "0.3.27"

[dev-dependencies]
anyhow = "1.0.70"